--- a/arch/powerpc/Kconfig
+++ b/arch/powerpc/Kconfig
@@ -36,11 +36,16 @@ config MPC8xx
 	imply CMD_REGINFO
 	imply MPC8xx_WATCHDOG
 
+config PPC470S
+	bool "PPC470S"
+	imply CMD_REGINFO
+
 endchoice
 
 source "arch/powerpc/cpu/mpc83xx/Kconfig"
 source "arch/powerpc/cpu/mpc85xx/Kconfig"
 source "arch/powerpc/cpu/mpc86xx/Kconfig"
 source "arch/powerpc/cpu/mpc8xx/Kconfig"
+source "arch/powerpc/cpu/ppc470s/Kconfig"
 
 endmenu
