--- a/drivers/serial/Makefile
+++ b/drivers/serial/Makefile
@@ -68,3 +68,6 @@ obj-$(CONFIG_NULLDEV_SERIAL) += serial_nulldev.o
 ifndef CONFIG_SPL_BUILD
 obj-$(CONFIG_USB_TTY) += usbtty.o
 endif
+
+obj-$(CONFIG_MPW7705_SERIAL) += serial_mpw7705.o
+
