--- a/board/rc-module/mpw7705/Makefile
+++ b/board/rc-module/mpw7705/Makefile
@@ -1,2 +1,7 @@
-obj-y += mpw7705.o io.o
+obj-y +=  io.o mpw7705_board_spi.o
 
+ifdef CONFIG_SPL_BUILD
+obj-y  += spl.o
+else
+obj-y  += mpw7705.o
+endif
