--- a/configs/mpw7705_defconfig
+++ b/configs/mpw7705_defconfig
@@ -2,20 +2,20 @@ CONFIG_PPC=y
 CONFIG_PPC470S=y
 CONFIG_TARGET_PPC470S=y
 CONFIG_TARGET_MPW7705=y
+CONFIG_DEFAULT_DEVICE_TREE="mpw7705"
 CONFIG_SPL_SERIAL_SUPPORT=y
 CONFIG_SPL_LIBCOMMON_SUPPORT=y
 CONFIG_SPL_LIBGENERIC_SUPPORT=y
-CONFIG_SPL_MMC_SUPPORT=y
-CONFIG_SPL_SERIAL_SUPPORT=y
-CONFIG_SPL_LIBDISK_SUPPORT=y
+#CONFIG_SPL_MMC_SUPPORT=y
+#CONFIG_SPL_LIBDISK_SUPPORT=y
 CONFIG_SPL_SPI_FLASH_SUPPORT=y
 CONFIG_SPL_SPI_SUPPORT=y
-CONFIG_SPL_FAT_SUPPORT=y
-CONFIG_SPL_EXT_SUPPORT=y
+#CONFIG_SPL_FAT_SUPPORT=y
+#CONFIG_SPL_EXT_SUPPORT=y
 CONFIG_SPL_LDSCRIPT="arch/powerpc/cpu/ppc470s/u-boot-spl.lds"
 CONFIG_BOOTDELAY=10
 CONFIG_SPL=y
-CONFIG_MTD_NOR_FLASH=y
+#CONFIG_MTD_NOR_FLASH=y
 CONFIG_SPI_FLASH=y
 CONFIG_SYS_PL011=y
 CONFIG_USB=y
@@ -25,5 +25,26 @@ CONFIG_DEBUG_UART_BASE=0x3C05D000
 CONFIG_DEBUG_UART_CLOCK=100000000
 CONFIG_MPW7705_SERIAL=y
 CONFIG_MPW7705_DDR=y
-CONFIG_FS_FAT=y
-CONFIG_FS_FAT_MAX_CLUSTSIZE=65536
+CONFIG_PL022_SPI=y
+#CONFIG_FS_FAT=y
+#CONFIG_FS_FAT_MAX_CLUSTSIZE=65536
+CONFIG_DM=y
+CONFIG_SPL_DM=y
+CONFIG_DM_WARN=y
+CONFIG_BLK=y
+CONFIG_SPL_BLK=y
+CONFIG_DM_SPI=y
+CONFIG_OF_BOARD_SETUP=y
+CONFIG_OF_LIBFDT=y
+CONFIG_OF_SEPARATE=y
+CONFIG_SPL_SEPARATE_BSS=y
+CONFIG_SUPPORT_OF_CONTROL=y
+CONFIG_OF_CONTROL=y
+CONFIG_DTC=y
+CONFIG_SPL_OF_CONTROL=y
+#CONFIG_SPL_OF_PLATDATA=y
+#CONFIG_FIT=y
+CONFIG_DM_SEQ_ALIAS=y
+CONFIG_SPL_DM_SEQ_ALIAS=y
+CONFIG_DM_SPI_FLASH=y
+CONFIG_SPI_FLASH_STMICRO=y
