--- a/configs/mpw7705_defconfig
+++ b/configs/mpw7705_defconfig
@@ -48,3 +48,22 @@ CONFIG_DM_SEQ_ALIAS=y
 CONFIG_SPL_DM_SEQ_ALIAS=y
 CONFIG_DM_SPI_FLASH=y
 CONFIG_SPI_FLASH_STMICRO=y
+CONFIG_DM_GPIO=y
+CONFIG_SPL_GPIO_SUPPORT=y
+CONFIG_PL061_GPIO=y
+
+CONFIG_LED=y
+CONFIG_DM_LED=y
+CONFIG_SPL_LED=y
+CONFIG_LED_GPIO=y
+CONFIG_SPL_LED_GPIO=y
+CONFIG_LED_BLINK=y
+CONFIG_LED_STATUS=y
+CONFIG_LED_STATUS_BLINKING=0
+CONFIG_LED_STATUS_GPIO=y
+CONFIG_LED_STATUS_BIT=1
+CONFIG_LED_STATUS_STATE=2
+CONFIG_LED_STATUS0=y
+
+CONFIG_SPL_LEGACY_IMAGE_SUPPORT=y
+CONFIG_SPL_RAW_IMAGE_SUPPORT=n
