--- a/configs/mpw7705_defconfig
+++ b/configs/mpw7705_defconfig
@@ -42,8 +42,6 @@ CONFIG_SUPPORT_OF_CONTROL=y
 CONFIG_OF_CONTROL=y
 CONFIG_DTC=y
 CONFIG_SPL_OF_CONTROL=y
-#CONFIG_SPL_OF_PLATDATA=y
-#CONFIG_FIT=y
 CONFIG_DM_SEQ_ALIAS=y
 CONFIG_SPL_DM_SEQ_ALIAS=y
 CONFIG_DM_SPI_FLASH=y
@@ -67,3 +65,12 @@ CONFIG_LED_STATUS0=y
 
 CONFIG_SPL_LEGACY_IMAGE_SUPPORT=y
 CONFIG_SPL_RAW_IMAGE_SUPPORT=n
+
+CONFIG_PINCTRL=y
+CONFIG_SPL_PINCTRL=y
+CONFIG_PINCTRL_PL061=y
+
+CONFIG_LOGLEVEL=8
+CONFIG_SPL_LOGLEVEL=8
+
+
