--- a/drivers/pinctrl/Kconfig
+++ b/drivers/pinctrl/Kconfig
@@ -138,6 +138,13 @@ config PINCTRL_AT91PIO4
 	  This option is to enable the AT91 pinctrl driver for AT91 PIO4
 	  controller which is available on SAMA5D2 SoC.
 
+config PINCTRL_PL061
+	bool "PL061 pinctrl driver"
+	depends on DM
+	help
+	  This option is to enable the PL061 pinctrl driver for PL061
+	  controller which is available on Module MPW7705 SOC.
+
 config PINCTRL_PIC32
 	bool "Microchip PIC32 pin-control and pin-mux driver"
 	depends on DM && MACH_PIC32
