--- a/configs/mpw7705_defconfig
+++ b/configs/mpw7705_defconfig
@@ -17,13 +17,12 @@ CONFIG_BOOTDELAY=10
 CONFIG_SPL=y
 #CONFIG_MTD_NOR_FLASH=y
 CONFIG_SPI_FLASH=y
-CONFIG_SYS_PL011=y
 CONFIG_USB=y
 CONFIG_USB_STORAGE=y
 CONFIG_DEBUG_UART=y
-CONFIG_DEBUG_UART_BASE=0x3C05D000
+CONFIG_DEBUG_UART_PL011=y
+CONFIG_DEBUG_UART_BASE=0x3C034000
 CONFIG_DEBUG_UART_CLOCK=100000000
-CONFIG_MPW7705_SERIAL=y
 CONFIG_MPW7705_DDR=y
 CONFIG_PL022_SPI=y
 #CONFIG_FS_FAT=y
@@ -34,7 +33,6 @@ CONFIG_DM_WARN=y
 CONFIG_BLK=y
 CONFIG_SPL_BLK=y
 CONFIG_DM_SPI=y
-CONFIG_OF_BOARD_SETUP=y
 CONFIG_OF_LIBFDT=y
 CONFIG_OF_SEPARATE=y
 CONFIG_SPL_SEPARATE_BSS=y
@@ -73,4 +71,11 @@ CONFIG_PINCTRL_PL061=y
 CONFIG_LOGLEVEL=8
 CONFIG_SPL_LOGLEVEL=8
 
+CONFIG_SYS_MALLOC_F_LEN=0x2000
 
+CONFIG_DM_MMC=y
+CONFIG_PCI=n
+
+CONFIG_DM_SERIAL=y
+CONFIG_SPL_DM_SERIAL=y
+CONFIG_PL011_SERIAL=y
