--- a/configs/mpw7705_defconfig
+++ b/configs/mpw7705_defconfig
@@ -66,3 +66,22 @@ CONFIG_PCI=n
 CONFIG_DM_SERIAL=y
 CONFIG_SPL_DM_SERIAL=y
 CONFIG_PL011_SERIAL=y
+
+CONFIG_SPL_DM_MMC=y
+CONFIG_MMC_MPW7705=y
+CONFIG_SPL_MMC_SUPPORT=y
+
+CONFIG_SYS_MMCSD_RAW_MODE_U_BOOT_USE_PARTITION=y
+CONFIG_SYS_MMCSD_RAW_MODE_U_BOOT_USE_PARTITION_TYPE=y
+CONFIG_SYS_MMCSD_RAW_MODE_U_BOOT_PARTITION_TYPE=0xdf
+
+# not enough space for FS support
+# CONFIG_SPL_FAT_SUPPORT=y
+# CONFIG_SPL_EXT_SUPPORT=y
+CONFIG_PARTITIONS=y
+CONFIG_SPL_DOS_PARTITION=y
+CONFIG_SPL_LIBDISK_SUPPORT=y
+
+
+
+
