--- a/configs/mpw7705_defconfig
+++ b/configs/mpw7705_defconfig
@@ -82,6 +82,11 @@ CONFIG_PARTITIONS=y
 CONFIG_SPL_DOS_PARTITION=y
 CONFIG_SPL_LIBDISK_SUPPORT=y
 
+CONFIG_DM_ETH=y
+CONFIG_NET=y
+CONFIG_GRETH_ETH=y
 
+CONFIG_NET_RANDOM_ETHADDR=y
 
-
+CONFIG_CMD_DHCP=y
+CONFIG_CMD_PING=y
