--- a/configs/mpw7705_defconfig
+++ b/configs/mpw7705_defconfig
@@ -90,3 +90,13 @@ CONFIG_NET_RANDOM_ETHADDR=y
 
 CONFIG_CMD_DHCP=y
 CONFIG_CMD_PING=y
+CONFIG_CMD_GPIO=y
+CONFIG_CMD_MMC=y
+CONFIG_CMD_PART=y
+CONFIG_CMD_FS_GENERIC=y
+CONFIG_CMD_FAT=y
+CONFIG_CMD_EXT4=y
+CONFIG_HUSH_PARSER=y
+
+CONFIG_ENV_IS_IN_SPI_FLASH=y
+
