--- a/configs/mpw7705_defconfig
+++ b/configs/mpw7705_defconfig
@@ -18,7 +18,12 @@ CONFIG_SPL=y
 #CONFIG_MTD_NOR_FLASH=y
 CONFIG_SPI_FLASH=y
 CONFIG_USB=y
+CONFIG_DM_USB=y
 CONFIG_USB_STORAGE=y
+CONFIG_CMD_USB=y
+CONFIG_USB_MUSB_HOST=y
+CONFIG_USB_MUSB_MODULE=y
+
 CONFIG_DEBUG_UART=y
 CONFIG_DEBUG_UART_PL011=y
 CONFIG_DEBUG_UART_BASE=0x3C034000
@@ -99,4 +104,5 @@ CONFIG_CMD_EXT4=y
 CONFIG_HUSH_PARSER=y
 
 CONFIG_ENV_IS_IN_SPI_FLASH=y
+
 
