Workaround problem with ACMD13 and ACM51 in SD card driver + fix in part_dos

--- a/cmd/Kconfig
+++ b/cmd/Kconfig
@@ -498,6 +498,11 @@ config CMD_MEMTEST
 	help
 	  Simple RAM read/write test.
 
+config CMD_MEMMAP
+	bool "memmap"
+	help
+	  Phys memory mapping.
+
 config CMD_MX_CYCLIC
 	bool "mdc, mwc"
 	help
