--- a/arch/powerpc/dts/mpw7705.dts
+++ b/arch/powerpc/dts/mpw7705.dts
@@ -4,6 +4,8 @@
 /dts-v1/;
 / {
 	compatible = "rc-module,mpw7705";
+	#address-cells = <1>;
+	#size-cells = <1>;
 
     config {
            u-boot,spl-payload-offset = <0x30000>; 
@@ -87,7 +89,7 @@
 		    #address-cells = <1>;
 		    #size-cells = <0>;
 		    reg = <0x3C03E000 0x1000>;
-		    cs-gpios = <&gpio1 2 1>;
+		    cs-gpios = <&gpio1 2 0>, <0>, <0>, <0>;
 		    spi-max-frequency = <12500000>;			
 		    u-boot,dm-pre-reloc;
 
@@ -120,6 +122,8 @@
 	lsif1 {
 	    u-boot,dm-pre-reloc;
 	    compatible = "simple-bus";
+		reg = <0x3C05E000 0x1000>;
+		reg-names = "ctrlreg";
 		#address-cells = <1>;
 		#size-cells = <1>;
 
@@ -194,11 +198,15 @@
 		    #address-cells = <1>;
 		    #size-cells = <0>;
 		    reg = <0x3C063000 0x1000>;
+		    u-boot,dm-pre-reloc;
 		
 			pinctrl {
+				    u-boot,dm-pre-reloc;
 					compatible = "rc-module,pl061-pinctrl";
 					
 					pinctrl_spi1_default: spi1_default {
+						u-boot,dm-pre-reloc;
+
 						pinmux = 	<SPI1_SCLK>,
 									<SPI1_MOSI>,
 									<SPI1_MISO>;
@@ -298,7 +306,6 @@
 			};
 		};
 
-
 		mmc0: mmc0@0x3C06A000 {
 			compatible = "rc-module,mmc-0.2";
 			reg = <0x3C06A000 0x1000>;
@@ -329,9 +336,48 @@
         usb: musb@0x3C052000 {
                 compatible = "rc-module,musbmhdrc";
                 reg = <0x3C052000 0x1000>,
-                      <0x3C05e000 0x1000>;
+                      <0x38000000 0x1000>;
                 reg-names = "mc", "control";
         };
+
+	    spi1: spi1@0x3C05A000 {
+		    compatible = "rc-module,pl022-spi";
+			pinctrl-names = "default";
+			pinctrl-0 = <&pinctrl_spi1_default>;
+			
+		    #address-cells = <1>;
+		    #size-cells = <1>;
+		    reg = <0x3C05A000 0x1000>;
+		    cs-gpios = <&gpio1 4 0>;
+		    spi-max-frequency = <400000>;
+			u-boot,dm-pre-reloc;
+/*
+			mmc1: mmc1@0 {
+				compatible = "rc-module,mmc-spi-0.2";
+				reg = <0x3C06A000 0x1000>;
+				carddetect-gpio = <&gpio1 1 0>;
+				u-boot,dm-pre-reloc;
+				status = "okay";
+			};
+*/			
+	    };
+/*
+	    spi2: spi2@0x3C059000 {
+		    compatible = "rc-module,pl022-spi";
+			pinctrl-names = "default";
+			pinctrl-0 = <&pinctrl_sdio_default>;
+			
+		    #address-cells = <1>;
+		    #size-cells = <0>;
+		    reg = <0x3C059000 0x1000>;
+		    //cs-gpios = <&gpio1 4 1>;
+		    spi-max-frequency = <12500000>;		
+			u-boot,dm-pre-reloc;
+
+				
+	    };
+*/
+		
 
 	};
 };
