--- a/configs/mpw7705_defconfig
+++ b/configs/mpw7705_defconfig
@@ -19,10 +19,20 @@ CONFIG_SPL=y
 CONFIG_SPI_FLASH=y
 CONFIG_USB=y
 CONFIG_DM_USB=y
-CONFIG_USB_STORAGE=y
+
 CONFIG_CMD_USB=y
-CONFIG_USB_MUSB_HOST=y
+#CONFIG_USB_MUSB_HOST=y
+CONFIG_USB_MUSB_GADGET=y
 CONFIG_USB_MUSB_MODULE=y
+CONFIG_USB_STORAGE=y
+CONFIG_USB_GADGET=y
+CONFIG_USB_GADGET_MANUFACTURER="RC Module"
+# Temporary VID - need to be changed
+CONFIG_USB_GADGET_VENDOR_NUM=0x0005
+# Temporary PID - need to be changed
+CONFIG_USB_GADGET_PRODUCT_NUM=0x0002
+CONFIG_USB_GADGET_DOWNLOAD=y
+
 
 CONFIG_DEBUG_UART=y
 CONFIG_DEBUG_UART_PL011=y
@@ -74,6 +84,7 @@ CONFIG_PL011_SERIAL=y
 
 CONFIG_SPL_DM_MMC=y
 CONFIG_MMC_MPW7705=y
+CONFIG_MMC_MPW7705_SPI=y
 CONFIG_SPL_MMC_SUPPORT=y
 
 CONFIG_SYS_MMCSD_RAW_MODE_U_BOOT_USE_PARTITION=y
@@ -102,6 +113,7 @@ CONFIG_CMD_FS_GENERIC=y
 CONFIG_CMD_FAT=y
 CONFIG_CMD_EXT4=y
 CONFIG_HUSH_PARSER=y
+CONFIG_CMD_USB_MASS_STORAGE=y
 
 CONFIG_ENV_IS_IN_SPI_FLASH=y
 
