Initial USB driver

--- a/drivers/mmc/Kconfig
+++ b/drivers/mmc/Kconfig
@@ -200,10 +200,17 @@ config MMC_MESON_GX
 	 Support for EMMC host controller on Meson GX ARM SoCs platform (S905)
 
 config MMC_MPW7705
-	bool "MPW7705 MMC controller support"
+	bool "MPW7705 MMC controller support (SDIO mode)"
 	depends on DM_MMC && BLK
 	help
 	  Support for MMC on MPW7705 platform
+
+config MMC_MPW7705_SPI
+	bool "MPW7705 MMC controller support (SPI mode)"
+	depends on DM_MMC && BLK
+	help
+	  Support for MMC over SPI on MPW7705 platform
+
 	 
 config MMC_MXC
 	bool "Freescale i.MX21/27/31 or MPC512x Multimedia Card support"
