--- a/configs/mpw7705_defconfig
+++ b/configs/mpw7705_defconfig
@@ -24,7 +24,7 @@ CONFIG_CMD_USB=y
 #CONFIG_USB_MUSB_HOST=y
 CONFIG_USB_MUSB_GADGET=y
 CONFIG_USB_MUSB_MODULE=y
-CONFIG_USB_STORAGE=y
+# CONFIG_USB_STORAGE=y
 CONFIG_USB_GADGET=y
 CONFIG_USB_GADGET_MANUFACTURER="RC Module"
 # Temporary VID - need to be changed
@@ -116,8 +116,6 @@ CONFIG_HUSH_PARSER=y
 CONFIG_CMD_USB_MASS_STORAGE=y
 
 CONFIG_ENV_IS_IN_SPI_FLASH=y
-
-CONFIG_CMD_MMC=y
 
 CONFIG_CMD_MEMTEST=y
 CONFIG_CMD_MEMMAP=y
