Updated version fixes

--- a/configs/mpw7705_defconfig
+++ b/configs/mpw7705_defconfig
@@ -47,6 +47,7 @@ CONFIG_SPL_DM=y
 CONFIG_DM_WARN=y
 CONFIG_BLK=y
 CONFIG_SPL_BLK=y
+CONFIG_SPI=y
 CONFIG_DM_SPI=y
 CONFIG_OF_LIBFDT=y
 CONFIG_OF_SEPARATE=y
@@ -73,7 +74,7 @@ CONFIG_PINCTRL_PL061=y
 CONFIG_LOGLEVEL=8
 CONFIG_SPL_LOGLEVEL=8
 
-CONFIG_SYS_MALLOC_F_LEN=0x2000
+CONFIG_SYS_MALLOC_F_LEN=0x8000
 
 CONFIG_DM_MMC=y
 CONFIG_PCI=n
