--- a/scripts/Makefile.spl
+++ b/scripts/Makefile.spl
@@ -202,6 +202,8 @@ ALL-$(CONFIG_SPL_X86_16BIT_INIT) += $(obj)/u-boot-x86-16bit-spl.bin
 ALL-$(CONFIG_ARCH_ZYNQ)		+= $(obj)/boot.bin
 ALL-$(CONFIG_ARCH_ZYNQMP)	+= $(obj)/boot.bin
 
+ALL-$(CONFIG_MPW7705)		+= $(obj)/$(SPL_BIN).rbi $(obj)/$(SPL_BIN).edcl
+
 all:	$(ALL-y)
 
 quiet_cmd_cat = CAT     $@
@@ -233,6 +235,17 @@ else
 $(obj)/$(SPL_BIN).bin: $(obj)/$(SPL_BIN)-nodtb.bin FORCE
 	$(call if_changed,copy)
 endif
+
+PACKIMAGEFLAGS_$(SPL_BIN).rbi = -t bootimage
+PACKIMAGEFLAGS_$(SPL_BIN).edcl = -t hostimage
+
+# cmd to create romboot image
+quiet_cmd_packimage = PACK    $@
+cmd_packimage = $(objtree)/tools/rumboot-packimage $(PACKIMAGEFLAGS_$(@F)) -i $< -o $@ >/dev/null
+
+# create rumboot image
+$(obj)/$(SPL_BIN).rbi $(obj)/$(SPL_BIN).edcl: $(obj)/$(SPL_BIN).bin
+	$(call if_changed,packimage)
 
 # Create a file that pads from the end of u-boot-spl-nodtb.bin to bss_end
 $(obj)/$(SPL_BIN)-pad.bin: $(obj)/$(SPL_BIN)
