spintable support for ppc47x

--- a/arch/powerpc/cpu/ppc470s/Makefile
+++ b/arch/powerpc/cpu/ppc470s/Makefile
@@ -1,5 +1,5 @@
 extra-y += start.o
 obj-y = speed.o
 obj-y += timer.o
-obj-y += cpu.o cpu_init.o cpu_init_early.o interrupts.o
+obj-y += cpu.o cpu_init.o cpu_init_early.o interrupts.o spintable.o
 
