--- a/arch/powerpc/dts/mpw7705.dts
+++ b/arch/powerpc/dts/mpw7705.dts
@@ -332,7 +332,7 @@
 		};
 */	
         usb: musb@0x3C052000 {
-                compatible = "rc-module,musbmhdrc";
+                compatible = "rc-module,musb";
                 reg = <0x3C052000 0x1000>,
                       <0x38000000 0x1000>;
                 reg-names = "mc", "control";
